feat(api): improve response status on http requests
